--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "[python]": {
         "editor.defaultFormatter": "ms-python.python"
     },
-    "editor.rulers": [80],
+    "editor.rulers": [],
     "python.formatting.provider": "black",
     "python.formatting.blackArgs": ["--line-length", "79"], 
     "python.linting.enabled": false
