--- a/Stephen/pendulum/requirements_alliancecan.txt
+++ b/Stephen/pendulum/requirements_alliancecan.txt
@@ -13,9 +13,9 @@ numpy==1.24.2+computecanada
 openpyxl==3.1.2+computecanada
 packaging==23.1+computecanada
 Pillow==9.5.0+computecanada
-pygame==2.1.3
-pygraphviz==1.11
-pyparsing==3.1.0
+pygame==2.5.0+computecanada
+pygraphviz
+pyparsing==3.0.9+computecanada
 python-dateutil==2.8.2+computecanada
 six==1.16.0+computecanada
-typing_extensions==4.7.1
+typing_extensions==4.5.0+computecanada
